# simpleFEM

./: .gitignore  CMakeLists.txt  README.md  rectangle.geo  rectangle_3NodeTri.vtk  rectangle_3NodeTri_2.vtk  rectangle_3NodeTri_refined.vtk  rectangle_3NodeTri_refined2.vtk  rectangle_3NodeTri_refined3.vtk  rectangle_4NodeQuad.vtk
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  bc.cpp  bc.hpp  fem.cpp  fem.hpp  io.cpp  io.hpp  mat.cpp  mat.hpp  mesh.cpp  mesh.hpp  utils.hpp
